--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/FedeAPerez/AVN#readme",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "firebase-admin": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
