--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "startdev": "nodemon server.js --debug=5858"
+    "startdev": "SET PORT=5757 && nodemon server.js --debug=5757"
   },
   "repository": {
     "type": "git",
