--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "firebase-admin": "^6.0.0"
+    "firebase-admin": "^6.0.0",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
