--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "SET IS_AUTH_ENABLED=false && nyc --all --reporter=html mocha --recursive --exit",
     "start": "nodemon server.js",
     "startdev": "SET AUTH_KEY=ataxicos && SET PORT=5757 && SET IS_AUTH_ENABLED=false && nodemon server.js --inspect=5757"
   },
@@ -29,6 +29,7 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
+    "supertest": "^3.3.0"
   }
 }
