7575 of code coverage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "SET IS_AUTH_ENABLED=false && nyc --all --reporter=html mocha --recursive --exit",
+    "test": "SET SHOULDNT_LOG_METRICS=true && SET IS_AUTH_ENABLED=false && nyc --all --reporter=html mocha --recursive --exit",
     "start": "nodemon server.js",
     "startdev": "SET AUTH_KEY=ataxicos && SET PORT=5757 && SET IS_AUTH_ENABLED=false && nodemon server.js --inspect=5757"
   },
