--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,8 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Attach (Inspector Protocol)",
-            "port": 5757,
+            "name": "Attach to AVN",
             "protocol": "inspector"
-     }
+        }
     ]
 }
